# factorama

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  EXAMPLES.md  LICENSE.txt  README.md  README_CPP.md  README_PYPI.md  TODO.md  bearing__projection__factor__2d_8cpp_source.html  bearing__projection__factor__2d_8hpp_source.html  classfactorama_1_1BearingObservationFactor-members.html  classfactorama_1_1BearingObservationFactor__coll__graph.map  classfactorama_1_1BearingProjectionFactor2D.html  classfactorama_1_1BearingProjectionFactor2D__coll__graph.map  classfactorama_1_1BearingProjectionFactor2D__coll__graph.md5  classfactorama_1_1Factor-members.html  classfactorama_1_1FactorGraph.html  classfactorama_1_1FactorGraph__coll__graph.md5  classfactorama_1_1GenericBetweenFactor-members.html  classfactorama_1_1GenericVariable.html  classfactorama_1_1GenericVariable__coll__graph.map  classfactorama_1_1HuberKernel__coll__graph.map  classfactorama_1_1HuberKernel__coll__graph.md5  classfactorama_1_1LandmarkVariable-members.html  classfactorama_1_1LandmarkVariable.html  classfactorama_1_1LandmarkVariable__coll__graph.map  classfactorama_1_1LandmarkVariable__inherit__graph.md5  classfactorama_1_1PoseOrientationBetweenFactor-members.html  classfactorama_1_1PoseOrientationBetweenFactor__coll__graph.map  classfactorama_1_1PoseOrientationPriorFactor-members.html  classfactorama_1_1PosePositionBetweenFactor__coll__graph.md5  classfactorama_1_1PosePositionBetweenFactor__inherit__graph.map  classfactorama_1_1PosePositionPriorFactor.html  classfactorama_1_1PosePositionPriorFactor__inherit__graph.md5  classfactorama_1_1PoseVariable-members.html  classfactorama_1_1PoseVariable.html  (+53 more)
.github/workflows/: build-wheels.yml
build2/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  factorama-config.cmake  integration_test  integration_test-b12d07c_include.cmake  integration_test-b12d07c_tests.cmake  optimizer_test  optimizer_test-b12d07c_include.cmake  optimizer_test-b12d07c_tests.cmake  solver_benchmark  unit_test  unit_test-b12d07c_include.cmake  unit_test-b12d07c_tests.cmake
build2/Testing/Temporary/: CTestCostData.txt
cmake/: factorama-config.cmake.in
docs/: conf.py  requirements.txt
examples/: 01_simple_localization.cpp  02_landmark_triangulation.cpp  python_example1.py  python_example2.py
python_bindings/: README.md  generate_stubs.py  requirements.txt  setup.py
python_bindings/examples/: simple_localization.py
python_bindings/python/: CMakeLists.txt  docstring.hpp
python_bindings/python/factorama/: __init__.py  __init__.pyi  _factorama.cpp  _factorama.pyi
python_bindings/python/factorama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_bindings/test/: test_2d_plotting.py  test_3d_plotting.py  test_basic.py  test_stubs.py  test_variables_and_factors.py
search/: all_1.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_1.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
src/factorama/: base_types.hpp  bearing_observation_factor.cpp  bearing_observation_factor.hpp  bearing_observation_factor_2d.cpp  bearing_observation_factor_2d.hpp  bearing_projection_factor_2d.cpp  bearing_projection_factor_2d.hpp  coordinate_transform_factor.hpp  factor_graph.cpp  factor_graph.hpp  generic_between_factor.cpp  generic_between_factor.hpp  generic_prior_factor.hpp  generic_variable.hpp  inverse_range_bearing_factor.cpp  inverse_range_bearing_factor.hpp  inverse_range_variable.cpp  inverse_range_variable.hpp  kernels.hpp  landmark_variable.hpp  linear_velocity_factor.cpp  linear_velocity_factor.hpp  numerical_jacobian.hpp  plane_factor.cpp  plane_factor.hpp  plane_prior_factor.cpp  plane_prior_factor.hpp  plane_variable.hpp  pose_2d_between_factor.cpp  pose_2d_between_factor.hpp  pose_2d_prior_factor.cpp  pose_2d_prior_factor.hpp  pose_2d_variable.cpp  pose_2d_variable.hpp  pose_between_factors.cpp  pose_between_factors.hpp  pose_prior_factors.cpp  pose_prior_factors.hpp  pose_variable.cpp  pose_variable.hpp  (+10 more)
src/factorama_test/: factor_tests.cpp  gtsam_benchmark.cpp  integration_test.cpp  optimizer_test.cpp  solver_benchmark.cpp  sparse_optimize.cpp  stopwatch_test.cpp  test_utils.hpp  unit_test.cpp  variable_tests.cpp
