[build-system]
requires = [
    "scikit-build-core>=0.10",  # recent version for better Windows support
    "pybind11[global]>=2.11",   # includes base pybind11 + mkdoc tools
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "factorama"
version = "1.0.6"
description = "Factor graph optimization library with Python bindings"
authors = [{ name = "Steven Gilbert" }]
license = { text = "MIT" }
readme = "README_PYPI.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.15.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_TESTS=OFF"
]
experimental = true


# tells scikit-build where your Python package source lives
wheel.packages = ["python_bindings/python/factorama"]

[tool.cibuildwheel]
# Build CPython 3.8–3.12, skip 32-bit Windows and old Linux i686
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-win32", "*-manylinux_i686"]


